k8s/solution3-multi-cluster-ilb-setup/templates/cluster1/cluster1_service_exporter.template.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sol0-ilb-${APP_NAME}-canary # dmarzi-app-web-01
spec:
  ports:
  - port: 8080
    name: http
  selector:
    # dmarzi@ wise words: "no you cant use two selectors in OR (prod or canary) but you can choose ANY selector" =>
    # I've added to kustomize for both python and ruby a ricc-awesome-selector: canary-or-prod for those two statuses. I'm strating to LOVE this!
    ricc-awesome-selector: canary-or-prod
    #TODO_ricc-awesome-app: ${APP_NAME}
    app: "${K8S_APP_SELECTOR}" # if we're lucky yhis shoulod suffice 9292 MultiAppK8sRefactoring
    #2022-07-15 Either use the latest appnames:
    # app: app02-kuruby
    # app: app01-python
