k8s/solution3-multi-cluster-ilb-setup/templates/cluster1/cluster1-gateway-config.template.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# to be applied to Cluster1
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: sol0-ilb-${APP_NAME}-http # was   name: dmarzi-apps-http
spec:
  gatewayClassName: gke-l7-rilb-mc
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway: sol0-ilb-${APP_NAME}-http
# there might be annotations to spciefy the proxy where it goes?
# it will pick one available: dmarzi-proxy or whatevs-proxy
# The Frontend IP will be picked from the subnet of the nodes if pvt cluster
# or as external cluster
# I have:
# - Public IP master
# - random node in GKE has external IP (35.241.142.235)
# It shoudl take a FE IP from Node subnet (in my case default/default). in eu-w1
# 10.132.15.203: 10.132.0.0/20
