k8s/solution3-multi-cluster-ilb-setup/templates/cluster1/cluster1-httproute.template.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: sol0-ilb-$APP_NAME-route # was: internal-store-route. Now we have TWO :)
  namespace: default
  labels:
    gateway: sol0-ilb-$APP_NAME-http
spec:
  parentRefs:
  - kind: Gateway
    namespace: default
    name: sol0-ilb-$APP_NAME-http
  hostnames:
  - "sol0-ilb-$APP_NAME.example.io"
  - "sol0-ilb-$APP_NAME.$MY_DOMAIN"
  - "sol0-passepartout.example.io"
  - "passepartout.example.io"
  rules:
  - backendRefs:
    # 90% of traffic to store-west-1 ServiceImport
    - name: sol0-ilb-$APP_NAME-canary # dmarzi-app-web-01
      group: net.gke.io
      kind: ServiceImport
      port: 8080
      weight: 90
    # 10% of traffic to store-west-2 ServiceImport
    - name: sol0-ilb-$APP_NAME-prod   # dmarzi-app-web-02
      group: net.gke.io
      kind: ServiceImport
      port: 8080
      weight: 10
